Align alumni images and fix featured alumnt post

--- a/wp-content/themes/nuclearnetwork/sass/pages/_alumni.scss
+++ b/wp-content/themes/nuclearnetwork/sass/pages/_alumni.scss
@@ -9,5 +9,6 @@
 		display: block;
         border-radius: 50%;
         margin: 1rem auto;
+		margin-left: 0 !important;
 	}
 }
